--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@material-ui/icons": "^1.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "react-youtube-embed": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
